syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message ResizeDiskRequest {
    types.Disk Disk = 1;
    uint64 Size = 2;
}

message ResizeDiskTaskState {
    ResizeDiskRequest Request = 1;
}

